# Xlang

./: .gitignore  CMakeLists.txt  README.md  common.h  wiki.md
inc/: bcstream.h  common.h  compiler.h  debugger.h  memory.h  scanner.h  value.h  vm.h
lib/inc/: logger.h
lib/src/: CMakeLists.txt
src/: CMakeLists.txt  bcstream.c  compiler.c  debugger.c  main.c  memory.c  scanner.c  value.c  vm.c
xlang/: Makefile  bcstream.c  bcstream.h  bytecode.c  bytecode.h  common.h  debugger.c  debugger.h  logger.c  logger.h  main.c  memory.c  memory.h  value.c  value.h
